--- a/index.html
+++ b/index.html
@@ -6,9 +6,45 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Weather</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style/style.css"/>
 </head>
 <body>
-    <div class = ""></div>
+    <div id = "wrapper">
+        <h1>Weather Dashboard</h1>
+    </div>
+    <div class = "row search">
+        <div class = "col-lg-3">
+            <div>
+                <h6>Search for a City:</h6>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" aria-label="city" aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                      <button class="btn btn-outline-secondary" type="button"><i class="fa fa-search"></i></button>
+                    </div>
+                  </div>
+            </div>
+        </div>
+
+        <div class = "col-lg-9">
+            <div class = "row">
+                <div class = "col-lg-12 col-md-12">
+                    <div class ="jumbotron">
+                        <h2 id = "location">Atlana</h2>
+                        <div id ="temp">Temperature:</div>
+                        <div id ="humidity">Humidity:</div>
+                        <div id ="wind-speed">Wind Speed:</div>
+                        <div id ="uv-index">UV Index:</div>
+                    </div>
+                </div>
+            </div>
+            <div class = "row">
+                <div class = "col-lg-12">
+                        <h3 class = "five-day">5-Day Forcast:</h3>
+                        <div class = "days"></div>
+                </div>
+            </div>
+        
+    </div>
 </body>
 </html>
