updating index.html and style.css updating styling

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div id = "wrapper">
         <h1>Weather Dashboard</h1>
     </div>
-    <div class = "row search">
-        <div class = "col-lg-3">
+    <div class = "row ">
+        <div class = "col-lg-3 search">
             <div>
                 <h6>Search for a City:</h6>
                 <div class="input-group mb-3">
