--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </div>
                 </div>
     
-                <div class = "addBtn"></div>
+                <div class =  "btn-group-vertical addBtn"></div>
             </div>
         </div>
 
@@ -44,7 +44,8 @@
             </div>
             <div class = "row">
                 <div class = "col-lg-12">
-                        <div class = "five-day">5-Day Forcast:
+                        <div class = "five-day">
+                            <h3>5-Day Forcast:</h3>
                             <div class = "row" id = "addFiveDay"></div>
 
                         </div>
